application/k8s/canary-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: safedeploy-canary-service

spec:
  type: ClusterIP

  selector:
    app: safedeploy-app
    version: canary

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
