application/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: safedeploy-service

spec:
  type: LoadBalancer

  selector:
    app: safedeploy-app
    version: stable

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
