application/k8s/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: safedeploy-canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: safedeploy-canary-service
                port:
                  number: 80
