application/k8s/stable-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: safedeploy-stable-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: safedeploy-service
                port:
                  number: 80
